--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ codes/category/dataset/encoded_dataset_30.0/test/state.json
 codes/category/dataset/encoded_dataset_30.0/train/dataset.arrow
 codes/category/dataset/encoded_dataset_30.0/train/dataset_info.json
 codes/category/dataset/encoded_dataset_30.0/train/state.json
+data/category/encoded_dataset_30.0/dataset_dict.json
+data/category/encoded_dataset_30.0/test/dataset.arrow
+data/category/encoded_dataset_30.0/test/dataset_info.json
+data/category/encoded_dataset_30.0/test/state.json
+data/category/encoded_dataset_30.0/train/dataset.arrow
+data/category/encoded_dataset_30.0/train/dataset_info.json
+data/category/encoded_dataset_30.0/train/state.json
